--- a/AloVoIP.OpenCRM/AloVoIP.OpenCRM.csproj
+++ b/AloVoIP.OpenCRM/AloVoIP.OpenCRM.csproj
@@ -2,12 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Company>AloVoIP</Company>
+    <Authors>AloVoIP</Authors>
+    <Owners>AloVoIP</Owners>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0</FileVersion>
+    <Description></Description>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Helper\**" />
-    <EmbeddedResource Remove="Helper\**" />
-    <None Remove="Helper\**" />
-  </ItemGroup>
-
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <OutputPath>..\.nuget\Publish\</OutputPath>
+  </PropertyGroup>
+  
 </Project>
