--- a/AloVoIP.OpenCRM/AloVoIP.OpenCRM.csproj
+++ b/AloVoIP.OpenCRM/AloVoIP.OpenCRM.csproj
@@ -8,7 +8,8 @@
     <Version>1.0.0</Version>
     <AssemblyVersion>1.0.0</AssemblyVersion>
     <FileVersion>1.0.0</FileVersion>
-    <Description></Description>
+	<RepositoryUrl>https://github.com/alovoip/AloVoIP.OpenCRM</RepositoryUrl>
+    <Description>The core interfaces and contracts that any CRM or ERP should implements them for integrating with AloVoIP Telephony system modules</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
