--- a/AloVoIP.OpenCRM.General/AloVoIP.OpenCRM.General.csproj
+++ b/AloVoIP.OpenCRM.General/AloVoIP.OpenCRM.General.csproj
@@ -19,6 +19,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="Refit" Version="6.3.2" />
     <PackageReference Include="Serilog" Version="2.11.0" />
     <PackageReference Include="System.Text.Json" Version="6.0.5" />
   </ItemGroup>
